--- a/styles/styles.css
+++ b/styles/styles.css
@@ -670,6 +670,8 @@ section {
 .contact-content-con {
   display: flex;
   padding-top: 3.5rem;
+  margin-bottom: 5rem
+
 }
 
 .contact-content-con .left-contact {
@@ -867,7 +869,7 @@ section {
 
 @media screen and (max-width: 600px) {
   header {
-    padding: 10 !important;
+    padding: 0 !important;
   }
 
   .theme-btn {
@@ -1023,6 +1025,7 @@ section {
   .contact-content-con .right-contact {
     margin-left: 0;
     margin-top: 2.5rem;
+
   }
 
   .contact-content-con .right-contact .i-c-2 {
